--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -1,1 +1,16 @@
-<p>landing works!</p>
+<p class="text-teal-500 mb-4">A GLOBAL PRODUCT & UX DESIGN COMPANY</p>
+
+    <h1 class="text-5xl font-bold mb-4">
+      Competitive<br>
+      advantage<br>
+      by <span class="text-teal-500">design.</span>
+    </h1>
+
+    <p class="text-gray-600 mb-2">We help companies transform their <span class="text-teal-500">customer
+        experience</span>.</p>
+    <p class="text-gray-600 mb-4">
+      We design products and services that focus on <span class="text-teal-500">user needs</span>,<br>
+      and make complex systems <span class="text-teal-500">brilliantly easy to use</span>.
+    </p>
+
+    <p class="text-gray-700 mt-8">Who we work with -</p>
