--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -14,3 +14,6 @@
     </p>
 
     <p class="text-gray-700 mt-8">Who we work with -</p>
+
+    <h1>{{ 'WELCOME' | translate }}</h1>
+    <p>{{ 'INTRO_MESSAGE' | translate }}</p>
