--- a/frontend/src/app/manage/manage.component.html
+++ b/frontend/src/app/manage/manage.component.html
@@ -1,3 +1,7 @@
+<div class="container mx-auto px-4 py-8">
+    <div class="bg-white min-h-screen">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20">
+
 <section class="mb-12">
     <h2 class="text-3xl font-bold mb-6">A staged process from idea, to technical proof of concept, to scaled solution</h2>
     <div class="space-y-6">
@@ -59,3 +63,5 @@
         </div>
     </div>
 </section>
+
+      </div></div></div>
