--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -1,3 +1,14 @@
-<p>admin works!</p>
-<img src="assets/svg/tuxedo.svg" alt="Description of your SVG">
+<div class="container mx-auto px-4 py-8">
+    <div class="bg-white min-h-screen">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20">
+            <div class="bg-white min-h-screen">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20">
 
+                    <p>admin works!</p>
+                    <img src="assets/svg/tuxedo.svg" alt="Description of your SVG">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
