--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -50,15 +50,10 @@
     </nav>
   </header>
 
-  <main class="container mx-auto px-4 py-8">
+  <main class="min-h-screen bg-gray-50">
     <!-- Router Outlet Placeholder -->
-    <div class="mt-8">
-      <router-outlet></router-outlet>
-    </div>
+    <router-outlet></router-outlet>
   </main>
 
-  <!-- Decorative elements -->
-  <div class="fixed top-1/2 right-20 w-32 h-32 border-2 border-teal-500 rounded-full"></div>
-  <div class="fixed bottom-20 right-40 w-16 h-16 bg-teal-500"></div>
-  <div class="fixed bottom-10 right-10 w-40 h-1 bg-teal-500"></div>
+
 </div>
