--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -1,28 +1,34 @@
 <div class="container mx-auto px-4 py-8">
 <div class="bg-white min-h-screen">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20">
+    <p class="text-lg mb-4">{{ 'INTRO_MESSAGE' | translate }}</p>
+      <p class="text-lg">{{message}}</p>
    
-      <p class="text-teal-500 text-lg mb-4">A GLOBAL PRODUCT & UX DESIGN COMPANY</p>
+      <p class="text-teal-500 text-lg mb-4">{{ 'TAGLINE' | translate }}</p>
 
       <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold leading-tight mb-6">
-        Competitive<br>
-        advantage<br>
-        by <span class="text-teal-500">design.</span>
+        {{ 'HEADBAN' | translate }} <span class="text-teal-500">design.</span>
       </h1>
 
       <div class="text-gray-600 text-lg mb-8">
-        <p class="mb-2">We help companies transform their <span class="text-teal-500">customer experience</span>.</p>
+        
         <p>
-          We design products and services that focus on <span class="text-teal-500">user needs</span>,<br class="hidden sm:inline">
-          and make complex systems <span class="text-teal-500">brilliantly easy to use</span>.
+          {{ 'MAINTEXT' | translate }} 
         </p>
       </div>
 
-      <p class="text-gray-700 text-xl font-semibold mt-12 mb-4">Who we work with -</p>
+      <p class="text-gray-700 text-xl font-semibold mt-12 mb-4">{{ 'REASONS' | translate }} </p>
 
       <h2 class="text-2xl font-bold mb-2">{{ 'WELCOME' | translate }}</h2>
-      <p class="text-lg mb-4">{{ 'INTRO_MESSAGE' | translate }}</p>
-      <p class="text-lg">{{message}}</p>
+
+      
+      <ul>
+        <li><b>{{ 'REASON1BOLD' | translate }}</b> {{ 'REASON1' | translate }}</li>
+        <li><b>{{ 'REASON2BOLD' | translate }}</b> {{ 'REASON2' | translate }}</li>
+        <li><b>{{ 'REASON3BOLD' | translate }}</b> {{ 'REASON3' | translate }}</li>
+        <li><b>{{ 'REASON4BOLD' | translate }}</b> {{ 'REASON4' | translate }}</li>
+      </ul>
+
     </div>
   </div>
 </div>
